feat: board main layout

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,6 +23,10 @@ body {
     cursor: pointer;
 }
 
+.min-w-0{
+    min-width: 0;
+}
+
 // !IMPORTANT for overriding bootstrap styles
 
 .main-wrapper {
