--- a/src/index.scss
+++ b/src/index.scss
@@ -27,6 +27,10 @@ body {
     min-width: 0;
 }
 
+.min-h-0{
+    min-height: 0;
+}
+
 // !IMPORTANT for overriding bootstrap styles
 
 .main-wrapper {
