hotfix: header styles

--- a/src/pages/header/Header.scss
+++ b/src/pages/header/Header.scss
@@ -19,3 +19,9 @@
         }
     }
 }
+
+@media (max-width: $media-sm-1){
+    .header-wrapper{
+        padding: 8px !important; // to override bootstrap style
+    }
+}
