--- a/src/pages/board/Board.scss
+++ b/src/pages/board/Board.scss
@@ -10,9 +10,6 @@
 
   & > :nth-child(2) {
     height: calc(100vh - 350px);
-    & > h6 {
-      min-height: 100px;
-    }
   }
 }
 
@@ -47,5 +44,42 @@
 .board-tasks {
   & > div {
     height: 200px;
+  }
+}
+
+@media (max-width: $media-lg-1) {
+  div:has(> .board-info) {
+    flex-direction: column;
+  }
+  .board-info {
+    flex-direction: row !important;
+    width: 100%;
+    height: 300px;
+    & > :first-child {
+      height: auto;
+      width: 50%;
+    }
+
+    & > :nth-child(2) {
+      height: auto;
+      width: 50%;
+    }
+  }
+}
+
+@media (max-width: $media-md-1) {
+  .board-info {
+    flex-direction: column !important;
+    width: 100%;
+    height: 600px;
+    & > :first-child {
+      height: auto;
+      width: 100%;
+    }
+
+    & > :nth-child(2) {
+      height: auto;
+      width: 100%;
+    }
   }
 }
