refactor: divided config

--- a/src/pages/header/Header.scss
+++ b/src/pages/header/Header.scss
@@ -1,4 +1,4 @@
-@import "../../variables.scss";
+@import "@/config/constants.scss";
 
 .dropdown-toggle::after {
   color: white !important; // to override bootstrap style
