--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import "variables.scss";
+@import "@/config/constants.scss";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
 body {
